ingress-correctly.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          service: 
            name: webapp1-svc
            port: 
              number: 80
        path: /webapp1
        pathType: Prefix 
      - backend:
          service: 
            name: webapp2-svc
            port: 
              number: 80
        path: /webapp2
        pathType: Prefix 
  - host: frontend.51.124.207.192.nip.io # change the IP address here
